name:                inliner3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/inliner3#readme
license:             BSD3
-- license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , inline-r < 0.9.1
                     , array
  include-dirs:        C
  C-sources:           C/functions.c
  default-extensions:  ForeignFunctionInterface
                     , DataKinds
  default-language:    Haskell2010

foreign-library inliner3
  type:                native-shared
  lib-version-info:    0:1:0
  if os(Windows)
    options: standalone
    mod-def-file: MyDef.def
  other-modules:       Dim
  build-depends:       base >= 4.7 && < 5
                     , inline-r < 0.9.1
                     , inliner3
                     , singletons
                     , vector
                     , array
                     , containers
  hs-source-dirs:      src-dll
  c-sources:           StartEnd.c
  ghc-options:         -fllvm
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/inliner3
